Fixed Typo Mistake

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p class="semi-bold text-left" contenteditable="true">چرا گفتم به شهر اندر نیایی</p>
                     <p class="semi-bold text-right" contenteditable="true">که باری بندی از دل بَرگشایی</p>
 
-                    <p class="semi-bold text-left" contenteditable="true">بگفت آنجا پریرویان نغزند</p>
+                    <p class="semi-bold text-left" contenteditable="true">بگفت آنجا پری‌رویان نغزند</p>
                     <p class="semi-bold text-right" contenteditable="true">چو گل بسیار شد پیلان بلغزند</p>
 
                 </div>
